Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,6 @@ a:hover,a:focus {
 }
 
 .oneline {
-  line-height: 20px;
   vertical-align: text-bottom;
 }
 
